first bunch
Signed-off-by: Michael Simons <michael@simons.ac>